...
struct ComplicationView: View {
    @Environment(\.widgetFamily) private var family

    var body: some View {
        switch family {
        case .accessoryInline:
            Label("Resistor", systemImage: "bolt.shield.fill")
                .containerBackground(.clear, for: .widget)
        case .accessoryCorner:
            glyph
                .padding(2)
                .widgetAccentable()
                .containerBackground(.clear, for: .widget)
...
